--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Skill Tree</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="./assets/vendor/Treant.css" />
 		<link rel="stylesheet" href="styles.css" />
 		<script src="./assets/vendor/raphael.js"></script>
@@ -11,7 +17,7 @@
 		<script defer type="module" src="skill-tree.js"></script>
 	</head>
 	<body>
-		<h1>Skills Tree</h1>
+		<h1>ROADMAPS</h1>
 		<nav id="roadmaps">
 			<button id="design">Design</button>
 			<button id="coordination">Coordination</button>
